--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title></title>
         <script src="js/app.js"></script>
-        <link rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
     </body>
